--- a/indexx.html
+++ b/indexx.html
@@ -22,13 +22,41 @@
         position: relative;
         top:100px
     }
+      .links{
+    font-size: 20px;
+    color: black;
+    margin-left: 20px;
+}
+.links:hover{
+    background-color: #0d5c2c;
+    font-size: 25px;
+} 
 </style>
 <html>
 
 <head>
     <title>Kheti - WEATHER</title>
 </head>
-<body>
+    <body style="background-color: #177a3d;">
+   
+        <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999;background-color: #14bb54;color: black;">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="color: black;">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#" style="color: black; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Khetii</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar" style="color: black;">
+                <ul class="nav navbar-nav">
+                    <li class="links"><a href="#Home" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Home</a></li>
+                    <li class="links"><a href="#movie" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">SDG</a></li>
+                    <li class="links"><a href="#akm" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Conacts</a></li>
+                </ul>
+            </div>
+        </nav>
     <h2 class="weather"><a href="https://www.google.com/search?q=weather"> Precise Weather </a></h2>
     <h1 class="deez">WEATHER REPORT</h1>
     <img src="https://t4.ftcdn.net/jpg/04/85/17/33/360_F_485173339_rHVWOWEwZneJpHqgFNiYJLSPQg7hNoAA.jpg">
