--- a/FIN INFO.html
+++ b/FIN INFO.html
@@ -11,11 +11,39 @@
     h2{
         font-family:"poppins medium";
     }
+      .links{
+    font-size: 20px;
+    color: black;
+    margin-left: 20px;
+}
+.links:hover{
+    background-color: #0d5c2c;
+    font-size: 25px;
+} 
 </style>
 <head>
     <title> FIN INFO </title>
 </head>
-<body> 
+    <body style="background-color: #177a3d;">
+   
+        <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999;background-color: #14bb54;color: black;">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="color: black;">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#" style="color: black; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Khetii</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar" style="color: black;">
+                <ul class="nav navbar-nav">
+                    <li class="links"><a href="#Home" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Home</a></li>
+                    <li class="links"><a href="#movie" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">SDG</a></li>
+                    <li class="links"><a href="#akm" style="color: black;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Conacts</a></li>
+                </ul>
+            </div>
+        </nav>
     <h1>WHAT HAPPENS WHEN YOU SELL</h1>
     <h2>TEST TEXT
     </h2>
